--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
-<<<<<<< HEAD
-project(final_proyect_Data_Structures)
-=======
-project(final_proyect)
->>>>>>> e11e33ddbaed45eacabc7280620b875526bd98b1
+project(FinalProject)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp)
-<<<<<<< HEAD
-add_executable(final_proyect_Data_Structures ${SOURCE_FILES})
-=======
-add_executable(final_proyect ${SOURCE_FILES})
->>>>>>> e11e33ddbaed45eacabc7280620b875526bd98b1
+set(SOURCE_FILES main.cpp Seat.cpp Seat.h Economy.cpp Economy.h EconomyPlus.cpp Economy.h FirstClass.cpp FirstClass.h Plane.cpp Plane.h Flight.cpp Flight.h Passenger.cpp Passenger.h Itinerary.cpp Itinerary.h)
+add_executable(FinalProject ${SOURCE_FILES})
