--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,17 @@
 *.iml
 
 .idea/cs3528finalprogram.iml
+
+FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/dgph
+
+FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/dgph
+
+FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/dgph
+
+FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/dgph
+
+FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/dgph
+
+FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/dgph
+
+FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/dgph
