fixed the error between files
don’t know why isn’t showing this version

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/
 FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/dgph
 
 FlightProgram/Build/Intermediates/FlightProgram.build/Debug/FlightProgram.build/dgph
+
+.idea/misc.xml
+
+.idea/cs3528finalprogram.iml
+
+.idea/misc.xml
