--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,11 @@ Plane.cpp
 Passenger.h
 
 main.cpp
+
+.idea/cs3528finalprogram.iml
+
+.idea/cs3528finalprogram.iml
+
+.idea/misc.xml
+
+.idea/workspace.xml
